--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tot",
   "version": "1.0.0",
-  "description": "Spin the wheel game backend",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server"
@@ -11,7 +11,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.2"
+    "express-session": "^1.17.3",
+    "mongoose": "^7.4.2",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
