--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1464.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bucket": "^0.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
+    "path": "^0.12.7",
     "razorpay": "^2.9.2"
   }
 }
